; ModuleID = '/home/carl/AnghaBench/fastdfs/client/extr_fdfs_appender_test.c_writeToFileCallback.c'
source_filename = "/home/carl/AnghaBench/fastdfs/client/extr_fdfs_appender_test.c_writeToFileCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8
@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @writeToFileCallback(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %4
  %13 = load i32, i32* @EINVAL, align 4
  store i32 %13, i32* %5, align 4
  br label %33

14:                                               ; preds = %4
  %15 = load i8*, i8** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to i32*
  %19 = call i32 @fwrite(i8* %15, i32 %16, i32 1, i32* %18)
  %20 = icmp ne i32 %19, 1
  br i1 %20, label %21, label %32

21:                                               ; preds = %14
  %22 = load i64, i64* @errno, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %21
  %25 = load i64, i64* @errno, align 8
  br label %29

26:                                               ; preds = %21
  %27 = load i32, i32* @EIO, align 4
  %28 = sext i32 %27 to i64
  br label %29

29:                                               ; preds = %26, %24
  %30 = phi i64 [ %25, %24 ], [ %28, %26 ]
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %5, align 4
  br label %33

32:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %33

33:                                               ; preds = %32, %29, %12
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @fwrite(i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
